@@ -1,3 +1,7 @@
+Apr 18, 2005
+
+  * ADDED: Search in all properties
+
 Apr 3, 2005
 
   * ADDED: "Show my subjects" to the graph vizualisation.
